[gd_scene load_steps=31 format=3 uid="uid://b2u7lf6h2icvj"]

[ext_resource type="Texture2D" uid="uid://bxckwox1vhow4" path="res://assets/icon/homepage.jpg" id="1_agx7c"]
[ext_resource type="Script" path="res://scripts/hud.gd" id="1_ow573"]
[ext_resource type="FontFile" uid="uid://b6awyna3nk1hj" path="res://assets/Wood and Paper UI/Daydream.ttf" id="2_86d3w"]
[ext_resource type="Texture2D" uid="uid://m87p4spvl46" path="res://assets/Pirate Treasure/Sprites/Gold Coin/01.png" id="3_vhyso"]
[ext_resource type="Texture2D" uid="uid://3g6q07gj1xt6" path="res://assets/Wood and Paper UI/Sprites/Green Button/4.png" id="4_4bndf"]
[ext_resource type="Texture2D" uid="uid://cxa5ra3fsxks5" path="res://assets/Pirate Treasure/Sprites/Silver Coin/01.png" id="4_5x776"]
[ext_resource type="Texture2D" uid="uid://b7gm0lngprmp3" path="res://assets/Pirate Treasure/Sprites/Red Diamond/01.png" id="5_ljgr3"]
[ext_resource type="Texture2D" uid="uid://cxuxl58kmp1fj" path="res://assets/Wood and Paper UI/Sprites/Green Button/2.png" id="5_ow0tm"]
[ext_resource type="Texture2D" uid="uid://dvaveucfnj8xl" path="res://assets/Wood and Paper UI/Sprites/Big Text/20.png" id="6_3o428"]
[ext_resource type="Texture2D" uid="uid://chjfh830qc5pk" path="res://assets/Wood and Paper UI/Sprites/Big Text/18.png" id="7_q7h5q"]
[ext_resource type="Texture2D" uid="uid://81qk1whqfq16" path="res://assets/Wood and Paper UI/Sprites/Life Bars/Big Bars/1.png" id="7_yl6j3"]
[ext_resource type="Texture2D" uid="uid://dgy8ffnejxpt0" path="res://assets/Wood and Paper UI/Sprites/Big Text/1.png" id="8_n1qor"]
[ext_resource type="Texture2D" uid="uid://cqgtglepe8urv" path="res://assets/Wood and Paper UI/Sprites/Life Bars/Big Bars/4.png" id="8_ntvr1"]
[ext_resource type="Texture2D" uid="uid://cvluiuw04ukq3" path="res://assets/Wood and Paper UI/Sprites/Big Text/19.png" id="9_qwxxi"]
[ext_resource type="Texture2D" uid="uid://dfdrx3qefjphn" path="res://assets/Wood and Paper UI/Sprites/Life Bars/Big Bars/3.png" id="9_r0mxb"]
[ext_resource type="Texture2D" uid="uid://b3bdhv2u8i563" path="res://assets/Wood and Paper UI/Sprites/Big Banner/6.png" id="10_d7n3v"]
[ext_resource type="Texture2D" uid="uid://6wj2fmn7mp2e" path="res://assets/Wood and Paper UI/Sprites/Life Bars/Colors/4.png" id="10_w352s"]
[ext_resource type="Texture2D" uid="uid://cxnqgn7s06pmm" path="res://assets/Wood and Paper UI/Sprites/Big Banner/5.png" id="11_aomym"]
[ext_resource type="Texture2D" uid="uid://dc8lnmv2wy5pv" path="res://assets/Wood and Paper UI/Sprites/Life Bars/Colors/3.png" id="11_w6ie3"]
[ext_resource type="Texture2D" uid="uid://dfgbu505mmhh1" path="res://assets/Wood and Paper UI/Sprites/Big Banner/4.png" id="12_mass0"]
[ext_resource type="Texture2D" uid="uid://c223tvt30xrrn" path="res://assets/Wood and Paper UI/Sprites/Life Bars/Colors/1.png" id="12_xitiu"]
[ext_resource type="Texture2D" uid="uid://de4aogsaljob6" path="res://assets/Wood and Paper UI/Sprites/Prefabs/3.png" id="13_7oiwa"]
[ext_resource type="Texture2D" uid="uid://bndw4ide2hfti" path="res://assets/Wood and Paper UI/Sprites/Big Banner/3.png" id="13_ime0s"]
[ext_resource type="Texture2D" uid="uid://cbd3m4wjqeb7n" path="res://assets/Wood and Paper UI/Sprites/Big Banner/2.png" id="14_8ivbl"]
[ext_resource type="Texture2D" uid="uid://dcxmol4cpr0pb" path="res://assets/Wood and Paper UI/Sprites/Big Banner/1.png" id="15_611h6"]
[ext_resource type="Texture2D" uid="uid://dva6yqa358us1" path="res://assets/Wood and Paper UI/Sprites/Big Text/7.png" id="16_kwkwj"]
[ext_resource type="Texture2D" uid="uid://cwl2ft7ouhrfr" path="res://assets/Wood and Paper UI/Sprites/Big Text/13.png" id="17_qmdpn"]
[ext_resource type="Texture2D" uid="uid://7fmnr8puiqe6" path="res://assets/Wood and Paper UI/Sprites/Big Text/5.png" id="18_fpx00"]
[ext_resource type="Texture2D" uid="uid://d3kbojfbpj080" path="res://assets/Wood and Paper UI/Sprites/Big Text/15.png" id="19_15i2p"]
[ext_resource type="Texture2D" uid="uid://c04e2pb3sc6yd" path="res://assets/Wood and Paper UI/Sprites/Big Text/22.png" id="20_h11gt"]

[node name="HUD" type="CanvasLayer"]
scale = Vector2(1.5, 1.5)
transform = Transform2D(1.5, 0, 0, 1.5, 0, 0)
script = ExtResource("1_ow573")

[node name="Initials" type="Node2D" parent="."]
position = Vector2(-0.999999, -62)
scale = Vector2(1.47951, 1.4256)

[node name="background" type="TextureRect" parent="Initials"]
offset_left = -2.9289
offset_top = 43.4905
offset_right = 1377.07
offset_bottom = 930.491
scale = Vector2(0.642438, 0.533394)
texture = ExtResource("1_agx7c")
expand_mode = 3
stretch_mode = 2

[node name="StartButton" type="Control" parent="Initials"]
layout_mode = 3
anchors_preset = 0
offset_left = 119.634
offset_top = 88.3838
offset_right = 159.634
offset_bottom = 117.384

[node name="board" type="Sprite2D" parent="Initials/StartButton"]
position = Vector2(331.641, 186.12)
scale = Vector2(2.37288, 1.99364)
texture = ExtResource("13_7oiwa")

[node name="button" type="Node2D" parent="Initials/StartButton"]
position = Vector2(389.333, 149.333)
scale = Vector2(9.47715, 8.98113)

[node name="buttonr" type="Sprite2D" parent="Initials/StartButton/button"]
position = Vector2(-12.8083, 0)
scale = Vector2(0.89089, 0.995269)
texture = ExtResource("5_ow0tm")

[node name="buttonl" type="Sprite2D" parent="Initials/StartButton/button"]
texture = ExtResource("4_4bndf")

[node name="startButton" type="Button" parent="Initials/StartButton"]
z_index = 1
layout_mode = 0
offset_left = 224.399
offset_top = 108.025
offset_right = 280.399
offset_bottom = 139.025
scale = Vector2(3.81333, 2.02052)
theme_override_fonts/font = ExtResource("2_86d3w")
flat = true

[node name="Start" type="Node2D" parent="Initials/StartButton/startButton"]
position = Vector2(7.3261, 15.0438)
scale = Vector2(0.776593, 1.85936)

[node name="Sprite2D9" type="Sprite2D" parent="Initials/StartButton/startButton/Start"]
position = Vector2(51.114, 0)
texture = ExtResource("6_3o428")

[node name="Sprite2D5" type="Sprite2D" parent="Initials/StartButton/startButton/Start"]
position = Vector2(-23.4253, -17.6941)

[node name="Sprite2D4" type="Sprite2D" parent="Initials/StartButton/startButton/Start"]
position = Vector2(38.3355, 0)
texture = ExtResource("7_q7h5q")

[node name="Sprite2D3" type="Sprite2D" parent="Initials/StartButton/startButton/Start"]
position = Vector2(25.557, 7.62939e-06)
texture = ExtResource("8_n1qor")

[node name="Sprite2D2" type="Sprite2D" parent="Initials/StartButton/startButton/Start"]
position = Vector2(12.7785, 0)
texture = ExtResource("6_3o428")

[node name="Sprite2D" type="Sprite2D" parent="Initials/StartButton/startButton/Start"]
texture = ExtResource("9_qwxxi")

[node name="InGame" type="Node2D" parent="."]
position = Vector2(47.3333, 52.6667)
scale = Vector2(0.604478, 0.572416)

[node name="Silver" type="Label" parent="InGame"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 8.2716
offset_top = -6.98793
offset_right = 54.2716
offset_bottom = 27.0121
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.2989, 1.22154)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/outline_size = 10
theme_override_constants/shadow_outline_size = 0
theme_override_fonts/font = ExtResource("2_86d3w")
theme_override_font_sizes/font_size = 25
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="InGame/Silver"]
position = Vector2(-24.3226, 16.7772)
scale = Vector2(2.71248, 3.0641)
texture = ExtResource("4_5x776")

[node name="Gold" type="Label" parent="InGame"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 8.2716
offset_top = 43.6745
offset_right = 54.2716
offset_bottom = 77.6745
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.2989, 1.22154)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_86d3w")
theme_override_font_sizes/font_size = 25
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="InGame/Gold"]
position = Vector2(-24.3226, 16.7772)
scale = Vector2(2.71248, 3.0641)
texture = ExtResource("3_vhyso")

[node name="Diamond" type="Label" parent="InGame"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 8.2716
offset_top = 97.8309
offset_right = 54.2716
offset_bottom = 131.831
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.2989, 1.22154)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_86d3w")
theme_override_font_sizes/font_size = 25
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="InGame/Diamond"]
position = Vector2(-21.6517, 20.0221)
scale = Vector2(2.52374, 2.90261)
texture = ExtResource("5_ljgr3")

[node name="HealthBar" type="Node2D" parent="InGame"]
position = Vector2(28.1234, 43.6745)
scale = Vector2(2, 2)

[node name="1" type="Sprite2D" parent="InGame/HealthBar"]
position = Vector2(-13.2346, -45.4215)
scale = Vector2(1.65432, 1.74698)
texture = ExtResource("7_yl6j3")

[node name="4" type="Sprite2D" parent="InGame/HealthBar"]
position = Vector2(92.6419, -45.4215)
scale = Vector2(1.65432, 1.74698)
texture = ExtResource("8_ntvr1")

[node name="3" type="Sprite2D" parent="InGame/HealthBar"]
position = Vector2(39.7037, -45.4215)
scale = Vector2(1.65432, 1.74698)
texture = ExtResource("9_r0mxb")

[node name="Red" type="TextureRect" parent="InGame/HealthBar"]
visible = false
offset_left = -12.0
offset_top = -49.0
offset_right = 114.0
offset_bottom = -44.0
texture = ExtResource("12_xitiu")

[node name="Green" type="TextureRect" parent="InGame/HealthBar"]
visible = false
offset_left = -12.0
offset_top = -49.0
offset_right = 114.0
offset_bottom = -39.0
texture = ExtResource("10_w352s")

[node name="Yellow" type="TextureRect" parent="InGame/HealthBar"]
visible = false
offset_left = -12.0
offset_top = -49.0
offset_right = 114.0
offset_bottom = -39.0
texture = ExtResource("11_w6ie3")

[node name="ProgressBar" type="TextureProgressBar" parent="InGame/HealthBar"]
offset_left = -12.4074
offset_top = -49.789
offset_right = 19.5926
offset_bottom = -47.789
scale = Vector2(3.95488, 4.72805)
value = 100.0
texture_progress = ExtResource("10_w352s")
tint_over = Color(0.936141, 0.63368, 0.7407, 1)

[node name="GameOver" type="Node2D" parent="."]
visible = false
position = Vector2(144, 74.6667)
scale = Vector2(1.33978, 1.30247)

[node name="StartButton" type="Control" parent="GameOver"]
layout_mode = 3
anchors_preset = 0
offset_left = 58.0
offset_top = 46.0
offset_right = 98.0
offset_bottom = 75.0

[node name="board" type="Sprite2D" parent="GameOver/StartButton"]
position = Vector2(331.641, 186.12)
scale = Vector2(2.37288, 1.99364)
texture = ExtResource("13_7oiwa")

[node name="button" type="Node2D" parent="GameOver/StartButton"]
position = Vector2(389.333, 149.333)
scale = Vector2(9.47715, 8.98113)

[node name="buttonr" type="Sprite2D" parent="GameOver/StartButton/button"]
position = Vector2(-12.8083, 0)
scale = Vector2(0.89089, 0.995269)
texture = ExtResource("5_ow0tm")

[node name="buttonl" type="Sprite2D" parent="GameOver/StartButton/button"]
texture = ExtResource("4_4bndf")

[node name="startButton" type="Button" parent="GameOver/StartButton"]
z_index = 1
layout_mode = 0
offset_left = 224.399
offset_top = 108.025
offset_right = 280.399
offset_bottom = 139.025
scale = Vector2(3.81333, 2.02052)
theme_override_fonts/font = ExtResource("2_86d3w")
flat = true

[node name="Start" type="Node2D" parent="GameOver/StartButton/startButton"]
position = Vector2(20.8744, 15.1652)
scale = Vector2(0.584539, 1.43108)

[node name="Sprite2D7" type="Sprite2D" parent="GameOver/StartButton/startButton/Start"]
position = Vector2(-25.2394, 0)
texture = ExtResource("7_q7h5q")

[node name="Sprite2D8" type="Sprite2D" parent="GameOver/StartButton/startButton/Start"]
position = Vector2(-12.6197, 0)
texture = ExtResource("18_fpx00")

[node name="Sprite2D9" type="Sprite2D" parent="GameOver/StartButton/startButton/Start"]
position = Vector2(51.114, 0)
texture = ExtResource("6_3o428")

[node name="Sprite2D5" type="Sprite2D" parent="GameOver/StartButton/startButton/Start"]
position = Vector2(-23.4253, -17.6941)

[node name="Sprite2D4" type="Sprite2D" parent="GameOver/StartButton/startButton/Start"]
position = Vector2(38.3355, 0)
texture = ExtResource("7_q7h5q")

[node name="Sprite2D3" type="Sprite2D" parent="GameOver/StartButton/startButton/Start"]
position = Vector2(25.557, 7.62939e-06)
texture = ExtResource("8_n1qor")

[node name="Sprite2D2" type="Sprite2D" parent="GameOver/StartButton/startButton/Start"]
position = Vector2(12.7785, 0)
texture = ExtResource("6_3o428")

[node name="Sprite2D" type="Sprite2D" parent="GameOver/StartButton/startButton/Start"]
texture = ExtResource("9_qwxxi")

[node name="scrollleft" type="Node2D" parent="GameOver"]
position = Vector2(111.333, 80)
scale = Vector2(2.39424, 2.2387)
metadata/_edit_group_ = true

[node name="8" type="Sprite2D" parent="GameOver/scrollleft"]
position = Vector2(42.6667, 131.333)
texture = ExtResource("10_d7n3v")

[node name="7" type="Sprite2D" parent="GameOver/scrollleft"]
position = Vector2(10.6667, 131.333)
texture = ExtResource("11_aomym")

[node name="10" type="Sprite2D" parent="GameOver/scrollleft"]
position = Vector2(42.6667, 99.3334)
texture = ExtResource("12_mass0")

[node name="9" type="Sprite2D" parent="GameOver/scrollleft"]
position = Vector2(10.6667, 99.3334)
texture = ExtResource("13_ime0s")

[node name="6" type="Sprite2D" parent="GameOver/scrollleft"]
position = Vector2(42.6667, 67.3333)
texture = ExtResource("12_mass0")

[node name="4" type="Sprite2D" parent="GameOver/scrollleft"]
position = Vector2(42.6667, 35.3333)
texture = ExtResource("12_mass0")

[node name="5" type="Sprite2D" parent="GameOver/scrollleft"]
position = Vector2(10.6667, 67.3333)
texture = ExtResource("13_ime0s")

[node name="3" type="Sprite2D" parent="GameOver/scrollleft"]
position = Vector2(10.6667, 35.3333)
texture = ExtResource("13_ime0s")

[node name="2" type="Sprite2D" parent="GameOver/scrollleft"]
position = Vector2(42.6667, 3.33334)
texture = ExtResource("14_8ivbl")

[node name="1" type="Sprite2D" parent="GameOver/scrollleft"]
position = Vector2(10.6667, 3.33334)
texture = ExtResource("15_611h6")

[node name="Node2D2" type="Node2D" parent="GameOver/scrollleft"]

[node name="scrollright" type="Node2D" parent="GameOver"]
position = Vector2(538, 80)
scale = Vector2(2.39424, 2.2387)
metadata/_edit_group_ = true

[node name="8" type="Sprite2D" parent="GameOver/scrollright"]
position = Vector2(42.6667, 131.333)
texture = ExtResource("10_d7n3v")

[node name="7" type="Sprite2D" parent="GameOver/scrollright"]
position = Vector2(10.6667, 131.333)
texture = ExtResource("11_aomym")

[node name="10" type="Sprite2D" parent="GameOver/scrollright"]
position = Vector2(42.6667, 99.3334)
texture = ExtResource("12_mass0")

[node name="9" type="Sprite2D" parent="GameOver/scrollright"]
position = Vector2(10.6667, 99.3334)
texture = ExtResource("13_ime0s")

[node name="6" type="Sprite2D" parent="GameOver/scrollright"]
position = Vector2(42.6667, 67.3333)
texture = ExtResource("12_mass0")

[node name="4" type="Sprite2D" parent="GameOver/scrollright"]
position = Vector2(42.6667, 35.3333)
texture = ExtResource("12_mass0")

[node name="5" type="Sprite2D" parent="GameOver/scrollright"]
position = Vector2(10.6667, 67.3333)
texture = ExtResource("13_ime0s")

[node name="3" type="Sprite2D" parent="GameOver/scrollright"]
position = Vector2(10.6667, 35.3333)
texture = ExtResource("13_ime0s")

[node name="2" type="Sprite2D" parent="GameOver/scrollright"]
position = Vector2(42.6667, 3.33334)
texture = ExtResource("14_8ivbl")

[node name="1" type="Sprite2D" parent="GameOver/scrollright"]
position = Vector2(10.6667, 3.33334)
texture = ExtResource("15_611h6")

[node name="game" type="Node2D" parent="GameOver"]
position = Vector2(175.333, 120.667)
scale = Vector2(3, 3)
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="GameOver/game"]
position = Vector2(0, 10.6667)
texture = ExtResource("16_kwkwj")

[node name="Sprite2D2" type="Sprite2D" parent="GameOver/game"]
position = Vector2(0, 26.6667)
texture = ExtResource("8_n1qor")

[node name="Sprite2D3" type="Sprite2D" parent="GameOver/game"]
position = Vector2(0, 42.6667)
texture = ExtResource("17_qmdpn")

[node name="Sprite2D4" type="Sprite2D" parent="GameOver/game"]
position = Vector2(0, 58.6667)
texture = ExtResource("18_fpx00")

[node name="over" type="Node2D" parent="GameOver"]
position = Vector2(602, 120.667)
scale = Vector2(3, 3)
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="GameOver/over"]
position = Vector2(0, 10.6667)
texture = ExtResource("19_15i2p")

[node name="Sprite2D2" type="Sprite2D" parent="GameOver/over"]
position = Vector2(0, 26.6667)
texture = ExtResource("20_h11gt")

[node name="Sprite2D3" type="Sprite2D" parent="GameOver/over"]
position = Vector2(0, 42.6667)
texture = ExtResource("18_fpx00")

[node name="Sprite2D4" type="Sprite2D" parent="GameOver/over"]
position = Vector2(0, 58.6667)
texture = ExtResource("7_q7h5q")

[connection signal="pressed" from="Initials/StartButton/startButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="GameOver/StartButton/startButton" to="." method="_on_start_button_pressed"]
